# 3d-info-latt

./: .gitignore  01_singlets.py  02_diamond_fermi_surface.py  LICENSE  README.md  main.py  pyproject.toml
demo/: lattice.py  main.py  physics.py
infolattice/: __init__.py  lattice.py  parallel.py  physics.py  plotting.py
utils/: parallel.py  plotting.py
